--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>LiteStore Form</title>
-    <link rel="icon" href="images/google-forms.png" type="image/icon type">
+    <title>CareerClimb</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/People_icon.svg/2048px-People_icon.svg.png" type="image/icon type">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
